Fix a missing border on the Set Assignments page, at cost of double border on Manage Groups

--- a/scss/_group-management.scss
+++ b/scss/_group-management.scss
@@ -216,7 +216,6 @@
 	table-layout: auto;
 	border-collapse: collapse;
 	border: #999 1px solid;
-	border-top: 0px;
 	margin: 0;
 	width:100%;
 
